--- a/src/app/blog/components/blog-post-details/blog-post-details.component.html
+++ b/src/app/blog/components/blog-post-details/blog-post-details.component.html
@@ -1,1 +1,4 @@
-<p>blog-post-details works!</p>
+<hr />
+<h1>#{{ postContent.id }} {{ postContent.title }}</h1>
+<p>{{ postContent.body }}</p>
+<hr />
