--- a/src/app/comments/components/view-comments/view-comments.component.html
+++ b/src/app/comments/components/view-comments/view-comments.component.html
@@ -1,1 +1,7 @@
-<p>view-comments works!</p>
+<div class="comment-card" *ngFor="let comment of comments">
+  <mat-card>
+    <mat-card-content>{{ comment.body }}</mat-card-content>
+    <mat-card-subtitle> {{ comment.name }} </mat-card-subtitle>
+    <mat-card-footer> {{ comment.email }} </mat-card-footer>
+  </mat-card>
+</div>
