--- a/src/app/blog/pages/blog-post-page/blog-post-page.component.html
+++ b/src/app/blog/pages/blog-post-page/blog-post-page.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="postContent">
   <etalytics-blog-post-details [postContent]="postContent"> </etalytics-blog-post-details>
 </div>
-<etalytics-create-comment></etalytics-create-comment>
+<etalytics-create-comment (addComment)="handleAddComment($event)"></etalytics-create-comment>
 <etalytics-view-comments [comments]="comments"></etalytics-view-comments>
