--- a/src/app/comments/components/create-comment/create-comment.component.html
+++ b/src/app/comments/components/create-comment/create-comment.component.html
@@ -1,8 +1,17 @@
 <div class="comment-form-card">
-  <form class="comment-form" [formGroup]="myForm" (ngSubmit)="addComment()">
+  <form class="comment-form" [formGroup]="myForm" (ngSubmit)="addCommentEvent($event)">
     <mat-form-field class="comment-full-width">
       <mat-label>Name</mat-label>
       <input matInput placeholder="Name of user" value="" formControlName="name" />
+    </mat-form-field>
+
+    <mat-form-field class="comment-full-width">
+      <mat-label>Email</mat-label>
+      <input matInput formControlName="email" placeholder="Ex. pat@example.com" />
+      <mat-error *ngIf="myForm.get('email').hasError('email') && !myForm.get('email').hasError('required')">
+        Please enter a valid email address
+      </mat-error>
+      <mat-error *ngIf="myForm.get('email').hasError('required')"> Email is required </mat-error>
     </mat-form-field>
 
     <mat-form-field class="comment-full-width">
@@ -10,8 +19,8 @@
       <textarea matInput placeholder="Feel free to reply..." formControlName="comment"></textarea>
     </mat-form-field>
 
-    <button type="submit">POST a comment</button>
-
+    <button type="submit" [disabled]="!myForm.valid">POST a comment</button>
+    {{ myForm.valid && myForm.dirty | json }}
     {{ myForm.value | json }}
   </form>
 </div>
