--- a/src/app/blog/pages/blog-post-list-page/blog-post-list-page.component.html
+++ b/src/app/blog/pages/blog-post-list-page/blog-post-list-page.component.html
@@ -7,7 +7,7 @@
             <mat-card-title>#{{ post.id }} {{ post.title }}</mat-card-title>
             <mat-card-content> {{ post.body }}</mat-card-content>
             <mat-card-actions>
-              <a routerLink="/blogs/post/{{ post.id }}" routerLinkActive="router-link-active">View More</a>
+              <a routerLink="/blogs/post/{{ post.id }}">View More</a>
             </mat-card-actions>
           </mat-card>
         </div>
