--- a/src/app/header/components/header/header.component.scss
+++ b/src/app/header/components/header/header.component.scss
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   align-items: center;
   padding: 8px 16px;
-
+  // background-color: #3f51b5;
   box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
 
   > .mat-button {
