--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,41 @@ body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
+
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+html {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, sans-serif;
+  height: 100%;
+  display: flex;
+}
+
+p {
+  margin: 16px;
+}
+
+.mat-card-header-text {
+  margin-left: 0;
+  border-bottom: 1px solid #ffd740;
+}
+
+mat-form-field {
+  width: 100%;
+}
+
+mat-list-item:hover {
+  cursor: pointer;
+  background: whitesmoke;
+}
+
+mat-list-item:not(:first-of-type) {
+  border-top: 1px solid #efefef;
+}
+
+mat-card-actions {
+  margin-bottom: 0;
+}
