--- a/src/app/blog/components/create-blog-post/create-blog-post.component.html
+++ b/src/app/blog/components/create-blog-post/create-blog-post.component.html
@@ -1,1 +1,39 @@
-<p>create-blog-post works!</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>
+      <h1>
+        <span *ngIf="selectedBlogPost.id; else prompt">Editing {{ originalTitle }}</span>
+        <ng-template #prompt>Create a Blog Post</ng-template>
+      </h1>
+    </mat-card-title>
+  </mat-card-header>
+  <form (submit)="saved.emit(selectedBlogPost)">
+    <mat-card-content>
+      <mat-form-field class="full-width">
+        <input matInput placeholder="Title" [(ngModel)]="selectedBlogPost.title" type="text" name="title" />
+      </mat-form-field>
+
+      <mat-form-field class="full-width">
+        <textarea
+          matInput
+          placeholder="Details"
+          [(ngModel)]="selectedBlogPost.body"
+          type="text"
+          name="details"
+        ></textarea>
+      </mat-form-field>
+
+      <mat-form-field class="full-width">
+        <mat-select placeholder="user" [(ngModel)]="selectedBlogPost.userId" name="userId">
+          <mat-option *ngFor="let user of users" [value]="user.id">
+            {{ user.name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions>
+      <button type="submit" mat-button color="primary">Save</button>
+      <button type="button" mat-button (click)="cancelled.emit(selectedBlogPost)">Cancel</button>
+    </mat-card-actions>
+  </form>
+</mat-card>
