--- a/src/app/blog/pages/blogs/blogs.component.html
+++ b/src/app/blog/pages/blogs/blogs.component.html
@@ -1,5 +1,14 @@
 <div class="container">
   <div class="col-50">
+    <etalytics-create-blog-post
+      [blogPost]="currentBlogPost"
+      [users]="users$"
+      (saved)="saveBlogPost($event)"
+      (cancelled)="resetCurrentBlogPost()"
+    >
+    </etalytics-create-blog-post>
+  </div>
+  <div class="col-50">
     <etalytics-blog-post-list
       [blogPosts]="blogPosts$ | async"
       (selected)="selectBlogPost($event)"
