--- a/src/app/blog/components/blog-post-details/blog-post-details.component.html
+++ b/src/app/blog/components/blog-post-details/blog-post-details.component.html
@@ -1,4 +1,10 @@
-<hr />
-<h1>#{{ postContent.id }} {{ postContent.title }}</h1>
-<p>{{ postContent.body }}</p>
-<hr />
+<mat-card class="blog-details-content">
+  <mat-card-header>
+    <mat-card-title>
+      <h1>#{{ postContent.id }} {{ postContent.title }}</h1>
+    </mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <p>{{ postContent.body }}</p>
+  </mat-card-content>
+</mat-card>
