--- a/src/app/blog/pages/blog-post-page/blog-post-page.component.html
+++ b/src/app/blog/pages/blog-post-page/blog-post-page.component.html
@@ -1,5 +1,13 @@
-<div *ngIf="postContent">
-  <etalytics-blog-post-details [postContent]="postContent"> </etalytics-blog-post-details>
+<div class="blog-post-details-container">
+  <div class="blog-details" *ngIf="postContent">
+    <etalytics-blog-post-details [postContent]="postContent"> </etalytics-blog-post-details>
+  </div>
+  <div class="comment-container">
+    <div class="comment-list">
+      <etalytics-view-comments [comments]="comments"></etalytics-view-comments>
+    </div>
+    <div class="create-comment">
+      <etalytics-create-comment (addComment)="handleAddComment($event)"></etalytics-create-comment>
+    </div>
+  </div>
 </div>
-<etalytics-create-comment (addComment)="handleAddComment($event)"></etalytics-create-comment>
-<etalytics-view-comments [comments]="comments"></etalytics-view-comments>
