--- a/src/app/blog/pages/blogs/blogs.component.html
+++ b/src/app/blog/pages/blogs/blogs.component.html
@@ -1,5 +1,5 @@
-<div class="container ">
-  <div class="col-50">
+<div class="blog-container">
+  <div class="create-blog-post">
     <etalytics-create-blog-post
       [blogPost]="currentBlogPost"
       [users]="users$"
@@ -8,7 +8,7 @@
     >
     </etalytics-create-blog-post>
   </div>
-  <div class="col-50">
+  <div class="blog-post-list">
     <etalytics-blog-post-list
       [blogPosts]="blogPosts$ | async"
       (selected)="selectBlogPost($event)"
