--- a/src/app/blog/pages/blogs/blogs.component.scss
+++ b/src/app/blog/pages/blogs/blogs.component.scss
@@ -1,10 +1,12 @@
-.container {
+.blog-container {
   display: flex;
   flex-direction: row;
-  // // max-width: 50%;
-  // width: 100%;
-  .col-50 {
+  justify-content: space-around;
+  margin-top: 20px;
+
+  .create-blog-post,
+  .blog-post-list {
     // flex: 0 0 50%;
-    width: 50%;
+    width: 45%;
   }
 }
