--- a/src/app/comments/components/create-comment/create-comment.component.html
+++ b/src/app/comments/components/create-comment/create-comment.component.html
@@ -1,26 +1,46 @@
-<div class="comment-form-card">
-  <form class="comment-form" [formGroup]="myForm" (ngSubmit)="addCommentEvent($event)">
-    <mat-form-field class="comment-full-width">
-      <mat-label>Name</mat-label>
-      <input matInput placeholder="Name of user" value="" formControlName="name" />
-    </mat-form-field>
+<mat-card class="comment-form-card">
+  <mat-card-header>
+    <mat-card-title>
+      <h1>
+        <span>Post a Comment</span>
+      </h1>
+    </mat-card-title>
+  </mat-card-header>
 
-    <mat-form-field class="comment-full-width">
-      <mat-label>Email</mat-label>
-      <input matInput formControlName="email" placeholder="Ex. pat@example.com" />
-      <mat-error *ngIf="myForm.get('email').hasError('email') && !myForm.get('email').hasError('required')">
-        Please enter a valid email address
-      </mat-error>
-      <mat-error *ngIf="myForm.get('email').hasError('required')"> Email is required </mat-error>
-    </mat-form-field>
+  <form class="comment-form" [formGroup]="createCommentForm" (ngSubmit)="addCommentEvent($event)">
+    <mat-card-content>
+      <mat-form-field class="comment-full-width">
+        <mat-label>Name</mat-label>
+        <input matInput placeholder="Your Name" value="" formControlName="name" type="text" name="User Name" />
+      </mat-form-field>
 
-    <mat-form-field class="comment-full-width">
-      <mat-label>Leave a comment</mat-label>
-      <textarea matInput placeholder="Feel free to reply..." formControlName="comment"></textarea>
-    </mat-form-field>
+      <mat-form-field class="comment-full-width">
+        <mat-label>Email</mat-label>
+        <input matInput formControlName="email" placeholder="Ex. pat@example.com" />
+        <mat-error
+          *ngIf="
+            createCommentForm.get('email').hasError('email') && !createCommentForm.get('email').hasError('required')
+          "
+        >
+          Please enter a valid email address
+        </mat-error>
+        <mat-error *ngIf="createCommentForm.get('email').hasError('required')"> Email is required </mat-error>
+      </mat-form-field>
 
-    <button type="submit" [disabled]="!myForm.valid">POST a comment</button>
-    {{ myForm.valid && myForm.dirty | json }}
-    {{ myForm.value | json }}
+      <mat-form-field class="comment-full-width">
+        <mat-label>Leave a comment</mat-label>
+        <textarea
+          matInput
+          placeholder="Feel free to reply..."
+          formControlName="comment"
+          type="text"
+          name="Comment Section"
+        ></textarea>
+      </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions>
+      <button type="submit" mat-button color="primary" [disabled]="!createCommentForm.valid">POST a comment</button>
+      <!-- <button type="button" mat-button (click)="cancelled.emit($event)">Cancel</button> -->
+    </mat-card-actions>
   </form>
-</div>
+</mat-card>
