--- a/src/app/header/components/header/header.component.html
+++ b/src/app/header/components/header/header.component.html
@@ -12,7 +12,7 @@
     href="https://github.com/Suraj-Singhvi/ng-blogger"
     aria-label="GitHub Repository"
   >
-    <img class="blogger-github-logo" src="/assets/images/github-icon-logo-png-transparent.png" alt="Github" />
+    <img class="blogger-github-logo" src="/assets/images/github-circle-white-transparent.svg" alt="Github" />
     GitHub
   </a>
 </nav>
