--- a/src/app/header/components/header/header.component.scss
+++ b/src/app/header/components/header/header.component.scss
@@ -5,7 +5,7 @@
   padding: 8px 16px;
   // background-color: #3f51b5;
   box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
-
+  background-color: #3f51b5;
   > .mat-button {
     &:last-child {
       margin-left: auto;
@@ -21,6 +21,8 @@
   height: 26px;
   margin: 0 4px 3px 0;
   vertical-align: middle;
+  background-color: aliceblue;
+  border: 2px solid aliceblue;
 }
 
 .blogger-github-logo {
