--- a/src/app/header/components/header/header.component.html
+++ b/src/app/header/components/header/header.component.html
@@ -10,6 +10,7 @@
     mat-button
     class="blogger-button"
     href="https://github.com/Suraj-Singhvi/ng-blogger"
+    target="_blank"
     aria-label="GitHub Repository"
   >
     <img class="blogger-github-logo" src="/assets/images/github-circle-white-transparent.svg" alt="Github" />
