--- a/src/app/blog/components/blog-post-list/blog-post-list.component.html
+++ b/src/app/blog/components/blog-post-list/blog-post-list.component.html
@@ -1,4 +1,33 @@
-<mat-card>
+<mat-card class="blog-post-list-card">
+  <mat-card-header>
+    <mat-card-title> <h1>Blog Posts</h1> </mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <mat-list>
+      <div class="blog-post-list-item " *ngFor="let post of blogPosts" (click)="selected.emit(post)">
+        <mat-card class="blog-post-list-item-card">
+          <mat-card-header class="">
+            <mat-card-title>#{{ post.id }} {{ post.title }}</mat-card-title>
+          </mat-card-header>
+
+          <mat-card-content>
+            <p class="user-comment">{{ post.body }}</p>
+          </mat-card-content>
+          <mat-card-actions>
+            <button mat-icon-button (click)="viewDetail.emit(post); $event.stopImmediatePropagation()">
+              <mat-icon>remove_red_eye</mat-icon>
+            </button>
+            <button mat-icon-button (click)="deleted.emit(post); $event.stopImmediatePropagation()">
+              <mat-icon>close</mat-icon>
+            </button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+    </mat-list>
+  </mat-card-content>
+</mat-card>
+
+<!-- <mat-card>
   <mat-card-header>
     <mat-card-title> <h1>Blog Posts</h1> </mat-card-title>
   </mat-card-header>
@@ -14,7 +43,7 @@
         <p mat-line>{{ post.body }}</p>
 
         <button mat-icon-button (click)="viewDetail.emit(post); $event.stopImmediatePropagation()">
-          <mat-icon>eye</mat-icon>
+          <mat-icon>remove_red_eye</mat-icon>
         </button>
         <button mat-icon-button (click)="deleted.emit(post); $event.stopImmediatePropagation()">
           <mat-icon>close</mat-icon>
@@ -22,4 +51,4 @@
       </mat-list-item>
     </mat-list>
   </mat-card-content>
-</mat-card>
+</mat-card> -->
