--- a/src/app/blog/components/create-blog-post/create-blog-post.component.html
+++ b/src/app/blog/components/create-blog-post/create-blog-post.component.html
@@ -16,6 +16,7 @@
       <mat-form-field class="full-width">
         <textarea
           matInput
+          required
           placeholder="Details"
           [(ngModel)]="selectedBlogPost.body"
           type="text"
@@ -24,7 +25,7 @@
       </mat-form-field>
 
       <mat-form-field class="full-width">
-        <mat-select placeholder="user" [(ngModel)]="selectedBlogPost.userId" name="userId">
+        <mat-select placeholder="user" required [(ngModel)]="selectedBlogPost.userId" name="userId">
           <mat-option *ngFor="let user of users" [value]="user.id">
             {{ user.name }}
           </mat-option>
